# Raggedy

./: pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: build.yml  publish.yml  pytest-linux.yml  pytest-macos.yml  pytest-windows.yml  pytest.yml
src/document/image/: types.py
src/document/pdf/: types.py  utils.py
src/raggedy/chat/: new_chat.py
src/raggedy/chat/subclasses/: ollama.py
src/raggedy/document/: doctype.py  document.py
src/raggedy/document/image/: types.py
src/raggedy/document/pdf/: types.py  utils.py
test/document/pdf/: test_utils.py
tests/chat/: test_chat.py
tests/document/pdf/: test_utils.py
