[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raggedy"
version = "0.0.2"
authors = [
    { name="Evan Su" },
]
description = "TBD...;"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "PySide6 >= 6.8.1",
    "PySide6-Essentials >= 6.8.1",
    "PySide6-Addons >= 6.8.1",
]

[project.urls]
Homepage = "https://github.com/HACKERALERT/Raggedy"
Issues = "https://github.com/HACKERALERT/Raggedy/issues"
